# clamor

./: .gitignore  AGENTS.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
clamor/: Cargo.toml  README.md
clamor-core/: Cargo.toml  README.md
clamor-core/src/: audio.rs  condition.rs  config.rs  dispatch.rs  event.rs  input.rs  lib.rs  notify.rs  windows.rs
clamor/src/: main.rs
