[package]
name = "clamor-core"
description = "Core library for clamor: cross-platform desktop notifications and audio for Claude Code hooks."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
readme = "README.md"
keywords = ["claude", "notifications", "hooks", "desktop", "audio"]
categories = ["command-line-utilities", "os"]

[dependencies]
camino = { workspace = true }
fastrand = { workspace = true }
fs-err = { workspace = true }
jaq-core = { workspace = true }
jaq-json = { workspace = true }
jaq-std = { workspace = true }
rodio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shellexpand = { workspace = true }
thiserror = { workspace = true }

# macOS shells out to `osascript` instead (see notify.rs): notify-rust's default
# macOS backend is the deprecated NSUserNotification API, which silently shows
# nothing for an unbundled CLI binary.
[target.'cfg(not(target_os = "macos"))'.dependencies]
notify-rust = { workspace = true }

[target.'cfg(windows)'.dependencies]
winreg = "0.56"

[lints]
workspace = true
